Added names to buttons and updated pressed function

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <input type="text" id="display">
             </div>
             <div id="buttons">
-                <p class="button">c</p>
+                <p class="button" name="clear">c</p>
                 <p class="button">+</p>
                 <p class="button">-</p>
                 <p class="button">*</p>
@@ -25,7 +25,7 @@
                 <p class="button">4</p>
                 <p class="button">5</p>
                 <p class="button">6</p>
-                <p class="button">=</p>
+                <p class="button" name="equals">=</p>
                 <p class="button">7</p>
                 <p class="button">8</p>
                 <p class="button">9</p>
