Added name to all buttons

--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
             </div>
             <div id="buttons">
                 <p class="button" name="clear">c</p>
-                <p class="button">+</p>
-                <p class="button">-</p>
-                <p class="button">*</p>
-                <p class="button">1</p>
-                <p class="button">2</p>
-                <p class="button">3</p>
-                <p class="button">/</p>
-                <p class="button">4</p>
-                <p class="button">5</p>
-                <p class="button">6</p>
+                <p class="button" name="+">+</p>
+                <p class="button" name="-">-</p>
+                <p class="button" name="*">*</p>
+                <p class="button" name="1">1</p>
+                <p class="button" name="2">2</p>
+                <p class="button" name="3">3</p>
+                <p class="button" name="/">/</p>
+                <p class="button" name="4">4</p>
+                <p class="button" name="5">5</p>
+                <p class="button" name="6">6</p>
                 <p class="button" name="equals">=</p>
-                <p class="button">7</p>
-                <p class="button">8</p>
-                <p class="button">9</p>
-                <p class="button">0</p>
+                <p class="button" name="7">7</p>
+                <p class="button" name="8">8</p>
+                <p class="button" name="9">9</p>
+                <p class="button" name="0">0</p>
             </div>
         </div>
     </body>
