--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
                 <input type="text" id="display">
             </div>
             <div id="buttons">
-                <p class="button" name="clear">c</p>
-                <p class="button" name="+">+</p>
-                <p class="button" name="-">-</p>
-                <p class="button" name="*">*</p>
-                <p class="button" name="1">1</p>
-                <p class="button" name="2">2</p>
-                <p class="button" name="3">3</p>
-                <p class="button" name="/">/</p>
-                <p class="button" name="4">4</p>
-                <p class="button" name="5">5</p>
-                <p class="button" name="6">6</p>
-                <p class="button" name="equals">=</p>
-                <p class="button" name="7">7</p>
-                <p class="button" name="8">8</p>
-                <p class="button" name="9">9</p>
-                <p class="button" name="0">0</p>
+               <button class="button"><p name="clear">c</p></button>
+               <button class="button"><p name="+">+</p></button>
+               <button class="button"><p name="-">-</p></button>
+               <button class="button"><p name="*">*</p></button>
+               <button class="button"><p name="1">1</p></button>
+               <button class="button"><p name="2">2</p></button>
+               <button class="button"><p name="3">3</p></button>
+               <button class="button"><p name="/">/</p></button>
+               <button class="button"><p name="4">4</p></button>
+               <button class="button"><p name="5">5</p></button>
+               <button class="button"><p name="6">6</p></button>
+               <button class="button"><p name="equals">=</p></button>
+               <button class="button"><p name="7">7</p></button>
+               <button class="button"><p name="8">8</p></button>
+               <button class="button"><p name="9">9</p></button>
+               <button class="button"><p name="0">0</p></button>  
             </div>
         </div>
     </body>
