Change button html, update javascript and css

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
                 <input type="text" id="display">
             </div>
             <div id="buttons">
-               <button class="button"><p name="clear">c</p></button>
-               <button class="button"><p name="+">+</p></button>
-               <button class="button"><p name="-">-</p></button>
+               <button class="button" name="clear">c</button>
+               <button class="button" name="+">+</button>
+               <button class="button" name="-">-</button>
                <button class="button"><p name="*">*</p></button>
                <button class="button"><p name="1">1</p></button>
                <button class="button"><p name="2">2</p></button>
