Fix operators and buttons

--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
                <button class="button" name="clear">c</button>
                <button class="button" name="+">+</button>
                <button class="button" name="-">-</button>
-               <button class="button"><p name="*">*</p></button>
-               <button class="button"><p name="1">1</p></button>
-               <button class="button"><p name="2">2</p></button>
-               <button class="button"><p name="3">3</p></button>
-               <button class="button"><p name="/">/</p></button>
-               <button class="button"><p name="4">4</p></button>
-               <button class="button"><p name="5">5</p></button>
-               <button class="button"><p name="6">6</p></button>
-               <button class="button"><p name="equals">=</p></button>
-               <button class="button"><p name="7">7</p></button>
-               <button class="button"><p name="8">8</p></button>
-               <button class="button"><p name="9">9</p></button>
-               <button class="button"><p name="0">0</p></button>  
+               <button class="button" name="*">*</button>
+               <button class="button" name="1">1</button>
+               <button class="button" name="2">2</button>
+               <button class="button" name="3">3</button>
+               <button class="button" name="/">/</button>
+               <button class="button" name="4">4</button>
+               <button class="button" name="5">5</button>
+               <button class="button" name="6">6</button>
+               <button class="button" name="equals">=</button>
+               <button class="button" name="7">7</button>
+               <button class="button" name="8">8</button>
+               <button class="button" name="9">9</button>
+               <button class="button" name="0">0</button>  
             </div>
         </div>
     </body>
