Fix display, add error message, update functions

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <div id="calculator">
             <div>
-                <input type="text" id="display">
+                <p id="display"></p>
             </div>
             <div id="buttons">
                <button class="button" name="clear">c</button>
